--- a/ui/src/pages/fileEditor/fileEditor.less
+++ b/ui/src/pages/fileEditor/fileEditor.less
@@ -45,12 +45,40 @@
     display: flex;
     flex-direction: row;
     overflow: hidden;
-    position: relative;
+}
+
+.line-numbers-scroller {
+    width: 40px;
+    height: 100%;
+    background-color: #1a1a1a;
+    border-right: 1px solid #333333;
+}
+
+.line-numbers-container {
+    display: flex;
+    flex-direction: column;
+    padding-top: 10px;
+}
+
+.line-number {
+    height: 18px;
+    line-height: 18px;
+    font-size: 12px;
+    color: #888888;
+    text-align: right;
+    padding-right: 5px;
+    min-height: 18px;
+}
+
+.editor-scroller {
+    flex: 1;
+    height: 100%;
+    overflow: scroll;
 }
 
 .editor-textarea {
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     font-size: 14px;
     line-height: 18px;
     font-family: 'Monaco', 'Consolas', monospace;
@@ -59,10 +87,7 @@
     padding: 10px;
     border: none;
     outline: none;
-    resize: none;
     white-space: pre;
-    overflow-y: auto;
-    overflow-x: auto;
 }
 
 .editor-status {
@@ -176,38 +201,6 @@
     justify-content: center;
     gap: 10px;
     margin-top: 15px;
-}
-
-.line-numbers {
-    width: 40px;
-    background-color: #1a1a1a;
-    border-right: 1px solid #333333;
-    flex-shrink: 0;
-    overflow-y: hidden;
-    display: flex;
-    flex-direction: column;
-}
-
-.line-number {
-    height: 18px;
-    line-height: 18px;
-    font-size: 12px;
-    color: #888888;
-    text-align: right;
-    padding-right: 5px;
-    flex-shrink: 0;
-}
-
-.editor-scroller {
-    flex: 1;
-    overflow-y: auto;
-    overflow-x: auto;
-    position: relative;
-}
-
-.editor-textarea-container {
-    min-height: 100%;
-    min-width: 100%;
 }
 
 .save-confirm {
