--- a/ui/src/pages/deviceinfo/deviceinfo.less
+++ b/ui/src/pages/deviceinfo/deviceinfo.less
@@ -4,7 +4,7 @@
   top: 0px;
   width: 100%;
   height: 100%;
-  background-color: #000000;
+  background-color: #ffffff;
   display: flex;
   flex-direction: column;
 }
@@ -14,10 +14,9 @@
   height: 60px;
   padding-left: 20px;
   padding-right: 20px;
-  background-color: #1a1a1a;
   border-bottom-width: 1px;
   border-bottom-style: solid;
-  border-bottom-color: #333333;
+  border-bottom-color: #e0e0e0;
   justify-content: space-between;
   align-items: center;
   flex-direction: row;
@@ -26,7 +25,7 @@
 .title {
   font-size: 18px;
   font-weight: bold;
-  color: #00ff00;
+  color: #333333;
 }
 
 .refresh-btn {
@@ -51,7 +50,7 @@
 .info-content {
   flex: 1;
   width: 100%;
-  background-color: #0c0c0c;
+  background-color: #ffffff;
   padding-left: 20px;
   padding-right: 20px;
   padding-top: 20px;
@@ -70,47 +69,35 @@
 .section-title {
   font-size: 16px;
   font-weight: bold;
-  color: #00ff00;
+  color: #333333;
   margin-bottom: 10px;
   padding-bottom: 5px;
   border-bottom-width: 1px;
   border-bottom-style: solid;
-  border-bottom-color: #333333;
+  border-bottom-color: #e0e0e0;
 }
 
 .info-item {
   width: 100%;
-  margin-bottom: 8px;
+  margin-bottom: 12px;
   flex-direction: column;
 }
 
 .item-label {
   font-size: 14px;
-  color: #cccccc;
-  margin-bottom: 2px;
+  color: #666666;
+  margin-bottom: 4px;
 }
 
 .item-value {
   font-size: 14px;
-  color: #ffffff;
-  background-color: #222222;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  border-radius: 4px;
+  color: #333333;
   word-break: break-all;
 }
 
 .error-value {
   font-size: 14px;
-  color: #ff5555;
-  background-color: #3a1a1a;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 5px;
-  padding-bottom: 5px;
-  border-radius: 4px;
+  color: #dc3545;
 }
 
 /* 加载状态 */
@@ -123,5 +110,5 @@
 
 .loading-text {
   font-size: 16px;
-  color: #ffaa00;
+  color: #666666;
 }
