--- a/ui/src/pages/fileManager/fileManager.less
+++ b/ui/src/pages/fileManager/fileManager.less
@@ -150,28 +150,10 @@
     color: #000000;
 }
 
-.context-menu {
-    position: fixed;
-    background-color: #222222;
-    border: 1px solid #444444;
-    border-radius: 3px;
-    padding: 5px;
-    z-index: 1000;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);
-}
-
-.menu-item {
-    min-width: 120px;
-    height: 30px;
-    line-height: 30px;
-    font-size: 14px;
-    color: #ffffff;
-    padding: 0 10px;
-    border-radius: 2px;
-}
-
-.menu-item:hover {
-    background-color: #333333;
+.btn-disabled {
+    background-color: #555555;
+    color: #888888;
+    cursor: not-allowed;
 }
 
 .confirm-modal {
