--- a/ui/src/pages/fileManager/fileManager.less
+++ b/ui/src/pages/fileManager/fileManager.less
@@ -1,5 +1,18 @@
 @import url('../../styles/section.less');
 
+/* 错误提示样式 */
+.section-error {
+  background-color: #331111;
+  border: 1px solid #ff4444;
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
+
+.section-title-error {
+  color: #ff4444 !important;
+  font-weight: bold;
+}
+
 .file-path {
     flex: 1;
     height: 24px;
